<resources>
    <string name="app_name">Selfbet</string>
    <string name="title_home">Home</string>
    <string name="title_group">Group</string>
    <string name="title_bets">Bets</string>
    <string name="title_money">Money</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_create_group">Create Group</string>
    <string name="title_activity_join_group">Join Group</string>
    <string name="bt_logout">Logout</string>
    <string name="tv_balance">Balance: </string>
</resources>
