<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_group"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_group" />

    <item
        android:id="@+id/navigation_bets"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_bets" />

    <item
        android:id="@+id/navigation_money"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_money" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_settings" />

</menu>
